[package]
name = "rkill"
description = "kill process by name, pid or port number"
license = "MIT"
documentation = "https://github.com/reflog/rkill"
homepage = "https://github.com/reflog/rkill"
version = "0.1.1"
authors = ["Eli Yukelzon <reflog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat2 = "0.9.1"
heim = {version = "0.1.0-rc.1", default-features = false, features = [ "process"] }
smol = "1.2.5"
futures = "0.3.15"
colored = "2.0.0"
seahorse = "1.1.2"

